# MageKnight

./: .gitignore  .gitmodules  MK.lhs  MageKnight.cabal  Main.hs  Makefile  cabal.project  package-lock.json  package.json
MageKnight/: Action.hs  AdvancedAction.hs  Artifact.hs  Attr.hs  Bag.hs  Cards.hs  Combat.hs  Common.hs  Deed.hs  DeedDecks.hs  DeedDecks.hs-boot  DummyPlayer.hs  Enemies.hs  Game.hs  Game1.hs  GameTile.hs  HexContent.hs  JSON.hs  Land.hs  Loc.hs  Movement.hs  Offers.hs  Perhaps.hs  Player.hs  Random.hs  ResourceQ.hs  Ruins.hs  Rule.hs  Skill.hs  Source.hs  Spell.hs  Tactic.hs  Terrain.hs  Turn.hs  Units.hs
app/: Main.hs  Utils.hs
app/Deed/: Action.hs  Basic.hs  Decks.hs
exes/: Main.hs
old/exes/: Main.hs  Test.hs
old/ui/: card.html  index.html  manual.html  offers.js  player_units.js  source.js
src/: Action.hs  AdvancedAction.hs  AppTypes.hs  Artifact.hs  Battle.hs  Combat.hs  Common.hs  Deed.hs  DeedDecks.hs  DeedDecks.hs-boot  DummyPlayer.hs  Enemies.hs  EnemyPool.hs  Fight.hs  Game.hs  Game1.hs  GameOld.hs  GameTile.hs  Hand.hs  Hero.hs  HexContent.hs  Input.hs  Land.hs  Main.hs  ManaPool.hs  Offer.hs  Offers.hs  Paths.hs  Player.hs  Ruins.hs  Rule.hs  Server.hs  Skill.hs  Source.hs  Spell.hs  State.hs  Tactic.hs  Terrain.hs  Turn.hs  Units.hs  (+1 more)
src/Combat/: Action.hs
src/Deed/: Action.hs  Basic.hs  Color.hs  Decks.hs  ManaPull.hs  Name.hs  Play.hs  Type.hs
src/Deed/Action/: Concentration.hs  ManaPull.hs  Rage.hs  Tranquility.hs
src/Game/: Input.hs  KOI.hs  State.hs  Turn.hs
src/Mana/: Pool.hs  Source.hs  Type.hs
src/Terrain/: Hex.hs  Map.hs  Tile.hs  Type.hs
src/Util/: Bag.hs  History.hs  JSON.hs  Perhaps.hs  Q.hs  Random.hs  ResourceQ.hs  Snap.hs
src/ui/: cards.ts  combat.js  constants.ts  hand.ts  index.html  main.ts  map.js  quantity.ts  question.ts  resources.js  source.ts  test.ts
src/ui/common-js/: connect.ts  template.ts
src/ui/style/: cards.css  common.css  enemy.css  layout.css  question.css  source.css
ui/: card.html  cards.js  combat.js  common-js  constants.js  design.html  enemy.js  hand.js  index.html  interactions.js  main.js  manaPool.js  map.js  offers.html  offers.js  play_area.js  player.js  player_cards.js  player_stats.js  player_units.js  quantity.css  quantity.js  question.js  rule changes.txt  source.js  style.css  template.js  tooltip.js
ui/style/: cards.css  combat.css  common.css  enemy.css  hand.css  layout.css  manaPool.css  map.css  quantity.css  question.css  resources.css  source.css
