cabal-version:       3.0
name:                MageKnight
version:             0.1.0.0
author:              Iavor S. Diatchki
maintainer:          iavor.diatchki@gmail.com
category:            Game
build-type:          Simple

common Common
  GHC-options: -Wall
  default-language:    Haskell2010
  default-extensions:
    BlockArguments, ImportQualifiedPost,
    RecordWildCards, NamedFieldPuns,
    DeriveGeneric, DeriveAnyClass,
    OverloadedStrings,
    FlexibleInstances,
    TypeFamilies,
    TemplateHaskell

library
  import: Common
  hs-source-dirs: src
  exposed-modules:

    State,
    Input,
    Hero,
    Deed,
    DeedDecks,
    Hand,

    Source,
    ManaPool,

    Units,
    Skill,

    Enemies,
    Ruins,

    Land,
    GameTile,
    HexContent,
    Terrain,

    Tactic,
    Fight,

    Common,
    Offer,
    Offers,

    Util.Random,
    Util.ResourceQ,
    Util.Q,
    Util.Misc,
    Util.Perhaps,

    AppTypes

  build-depends:
    base,
    bytestring,
    text,
    containers,
    aeson,
    vector,
    random,
    array,
    pretty,
    snap-core,
    snap-server,
    filepath,
    KOI-utils,
    KOI-interact

executable MageKnight
  import: Common
  hs-source-dirs: app
  main-is: Main.hs
  other-modules:
    Utils,
    Deed.Action,
    Deed.Basic,
    Deed.Decks
  build-depends:
    base,
    containers,
    bytestring,
    text,
    KOI-utils,
    KOI-interact,
    MageKnight



