cabal-version:       3.0
name:                MageKnight
version:             0.1.0.0
author:              Iavor S. Diatchki
maintainer:          iavor.diatchki@gmail.com
category:            Game
build-type:          Simple

executable MageKnight

  GHC-options: -Wall
  default-language:    Haskell2010
  default-extensions:
    BlockArguments, ImportQualifiedPost,
    RecordWildCards, NamedFieldPuns,
    DeriveGeneric, DeriveAnyClass,
    OverloadedStrings,
    FlexibleInstances,
    TypeFamilies,
    TemplateHaskell

  hs-source-dirs: src
  main-is: Main.hs

  other-modules:
    Utils,
    Deed.Action,
    Deed.Basic,
    Deed.ManaPull,
    Deed.Decks,

    State,
    Input,
    Hero,
    Deed,
    DeedDecks,
    Hand,

    Source,
    ManaPool,

    Turn,

    Units,
    Skill,

    Enemies,
    Ruins,

    Terrain.Map,
    Terrain.Tile,
    Terrain.Hex,
    Terrain.Type,

    Tactic,
    Battle,

    Common,
    Offer,
    Offers,

    Util.Random,
    Util.ResourceQ,
    Util.Q,
    Util.Misc,
    Util.Perhaps,

    AppTypes


  build-depends:
    base,
    containers,
    bytestring,
    text,
    aeson,
    vector,
    random,
    array,
    pretty,
    snap-core,
    snap-server,
    filepath,
    KOI-utils,
    KOI-interact


