cabal-version:       3.0
name:                MageKnight
version:             0.1.0.0
author:              Iavor S. Diatchki
maintainer:          iavor.diatchki@gmail.com
category:            Game
build-type:          Simple

executable MageKnight

  GHC-options: -Wall
  default-language:    Haskell2010
  default-extensions:
    BlockArguments, ImportQualifiedPost,
    RecordWildCards, NamedFieldPuns,
    DeriveGeneric, DeriveAnyClass,
    OverloadedStrings,
    FlexibleInstances,
    TypeFamilies,
    TemplateHaskell

  hs-source-dirs: src
  main-is: Main.hs

  other-modules:
    Game.KOI,
    Game.State,
    Game.Input,
    Game.Turn,

    Utils,

    Deed.Type,
    Deed.Color,
    Deed.Action,
    Deed.Play,
    Deed.Action.ManaPull,
    Deed.Action.Tranquility,
    Deed.Action.Concentration,
    Deed.Action.Rage,

    Combat,
    Combat.Action,

    Hero,

    Hand,

    Mana.Type,
    Mana.Source,
    Mana.Pool,

    Units,
    Skill,

    Enemies,
    Ruins,

    Terrain.Map,
    Terrain.Tile,
    Terrain.Hex,
    Terrain.Type,

    Tactic,

    Common,
    Offer,
    Offers,

    Util.Random,
    Util.ResourceQ,
    Util.Q,
    Util.Misc,
    Util.Perhaps,



  build-depends:
    base,
    containers,
    bytestring,
    text,
    aeson,
    vector,
    random,
    array,
    pretty,
    snap-core,
    snap-server,
    filepath,
    optics,
    KOI-utils,
    KOI-interact


